# tiny-raytracer

./: Cargo.toml  README.md
raytracer/: Cargo.toml  build.rs
raytracer/src/: camera.rs  image.rs  lib.rs  random.rs  ray.rs
raytracer/src/accel/: mod.rs
raytracer/src/accel/cpu/: aabb.rs
raytracer/src/accel/gpu/: buffer.rs  computepass.rs  encoder.rs  instance.rs  mod.rs  module.rs  pipeline.rs  tests.rs
raytracer/src/hittable/: aabb.rs  bvh.rs  list.rs  mod.rs  quad.rs  sphere.rs  world.rs
raytracer/src/material/: dielectric.rs  lambertian.rs  light.rs  metal.rs  mod.rs
raytracer/src/math/: mod.rs  transform.rs  vec3.rs  vec3extend.rs
raytracer/src/pipeline/: descriptor.rs  dto.rs  imager.rs  instance.rs  mod.rs  pointgen.rs  samplegenerator.rs  sampler.rs
raytracer/src/renderer/: bruteforce.rs  colorsampler.rs  imager.rs  mod.rs  pointgen.rs  renderer.rs  sampler.rs
raytracer/src/renderer/sampler/: cpu.rs  mod.rs
raytracer/src/renderer/sampler/metal/: accelstructure.rs  mod.rs  pipeline.rs  sampler.rs  shader.metallib
raytracer/src/renderer/sampler/metal/geometry/: masks.rs  mod.rs  quad.rs  sphere.rs
raytracer/src/renderer/sampler/metal/shader/: geometry.metal  kernel.metal
raytracer/src/utils/: image.rs  mod.rs  random.rs
src/: main.rs
