[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
rand = "0.8.5"
indicatif = "0.17.8"
flume = "0.11.0"
bytemuck = { version = "1.17.0", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
metal = "0.30.0"

[build-dependencies]
glob = "0.3"